--- a/Water Purifier/Water Purifier/Views/Base.lproj/Main.storyboard
+++ b/Water Purifier/Water Purifier/Views/Base.lproj/Main.storyboard
@@ -289,21 +289,21 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FLp-rt-aWr">
-                                        <rect key="frame" x="64.333333333333371" y="0.0" width="57.333333333333343" height="70"/>
+                                        <rect key="frame" x="64.333333333333343" y="0.0" width="57.333333333333343" height="70"/>
                                         <state key="normal" title="Button" image="5pesos"/>
                                         <connections>
                                             <action selector="fivePesosCoinWasPressed:" destination="2Qp-UY-gRR" eventType="touchUpInside" id="pbJ-rZ-gmh"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0kS-Q0-cg3">
-                                        <rect key="frame" x="128.66666666666674" y="0.0" width="57" height="70"/>
+                                        <rect key="frame" x="128.66666666666666" y="0.0" width="57" height="70"/>
                                         <state key="normal" title="Button" image="2pesos"/>
                                         <connections>
                                             <action selector="twoPesosCoinWasPressed:" destination="2Qp-UY-gRR" eventType="touchUpInside" id="R6F-Q2-Oaa"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZc-TJ-hjk">
-                                        <rect key="frame" x="192.66666666666652" y="0.0" width="57.333333333333343" height="70"/>
+                                        <rect key="frame" x="192.66666666666669" y="0.0" width="57.333333333333343" height="70"/>
                                         <state key="normal" title="Button" image="1peso"/>
                                         <connections>
                                             <action selector="onePesoCoinWasPressed:" destination="2Qp-UY-gRR" eventType="touchUpInside" id="G8B-Qg-a4K"/>
@@ -475,7 +475,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="fillWasPressed:" destination="C5K-Wq-48w" eventType="touchUpInside" id="HZ8-Hh-IH1"/>
+                                    <segue destination="sNa-N3-Fqa" kind="show" identifier="toFillProduct" id="0qN-2w-fCS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -503,6 +503,91 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1QK-J8-wQl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4671" y="119"/>
+        </scene>
+        <!--FillVC-->
+        <scene sceneID="buE-t6-Pf1">
+            <objects>
+                <viewController id="sNa-N3-Fqa" customClass="FillVC" customModule="Water_Purifier" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zrq-78-li9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9Mk-h2-EZG">
+                                <rect key="frame" x="82" y="708" width="250" height="4"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="progressTintColor" red="0.2214289606" green="0.4825823903" blue="0.73074275259999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </progressView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RKC-gC-qac">
+                                <rect key="frame" x="120" y="570" width="174" height="91.333333333333371"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Llenado:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VrZ-aR-XZO">
+                                        <rect key="frame" x="0.0" y="0.0" width="174" height="35.666666666666664"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="26"/>
+                                        <color key="textColor" red="0.1572124362" green="0.46500980850000001" blue="0.75174599890000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="en proceso" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Qc-gN-Wia">
+                                        <rect key="frame" x="0.0" y="55.666666666666629" width="174" height="35.666666666666657"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="26"/>
+                                        <color key="textColor" red="0.1572124362" green="0.46500980850000001" blue="0.75174599890000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="garrafon-completo" translatesAutoresizingMaskIntoConstraints="NO" id="6qV-bR-KPs">
+                                <rect key="frame" x="131" y="280" width="152" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="D3h-Kq-nr3"/>
+                                    <constraint firstAttribute="height" constant="200" id="R7L-P7-OxU"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kTA-kc-1Ff">
+                                <rect key="frame" x="83.666666666666686" y="176" width="247" height="71.333333333333314"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gracias por su compra" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZQ-4w-2HK">
+                                        <rect key="frame" x="0.0" y="0.0" width="247" height="31.666666666666668"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="23"/>
+                                        <color key="textColor" red="0.2214289606" green="0.4825823903" blue="0.73074275259999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vuelva pronto  😉" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3U-qw-Hhq">
+                                        <rect key="frame" x="0.0" y="39.666666666666657" width="247" height="31.666666666666671"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="23"/>
+                                        <color key="textColor" red="0.2214289606" green="0.4825823903" blue="0.73074275259999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8l3-6K-puW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8l3-6K-puW" firstAttribute="trailing" secondItem="6qV-bR-KPs" secondAttribute="trailing" constant="131" id="1VE-UU-1HC"/>
+                            <constraint firstItem="8l3-6K-puW" firstAttribute="trailing" secondItem="9Mk-h2-EZG" secondAttribute="trailing" constant="82" id="5NT-Hl-bU0"/>
+                            <constraint firstItem="RKC-gC-qac" firstAttribute="centerX" secondItem="zrq-78-li9" secondAttribute="centerX" id="LLU-Gd-qN7"/>
+                            <constraint firstItem="kTA-kc-1Ff" firstAttribute="top" secondItem="8l3-6K-puW" secondAttribute="top" constant="88" id="Muw-vE-hbq"/>
+                            <constraint firstItem="6qV-bR-KPs" firstAttribute="leading" secondItem="8l3-6K-puW" secondAttribute="leading" constant="131" id="Sv6-kc-chc"/>
+                            <constraint firstItem="RKC-gC-qac" firstAttribute="top" secondItem="6qV-bR-KPs" secondAttribute="bottom" constant="90" id="TYi-NG-lAW"/>
+                            <constraint firstItem="8l3-6K-puW" firstAttribute="bottom" secondItem="9Mk-h2-EZG" secondAttribute="bottom" constant="150" id="cNn-0m-wH8"/>
+                            <constraint firstItem="kTA-kc-1Ff" firstAttribute="centerX" secondItem="zrq-78-li9" secondAttribute="centerX" id="eCG-zL-SW6"/>
+                            <constraint firstItem="8l3-6K-puW" firstAttribute="trailing" secondItem="RKC-gC-qac" secondAttribute="trailing" constant="120" id="fam-wc-Fwj"/>
+                            <constraint firstItem="9Mk-h2-EZG" firstAttribute="centerX" secondItem="zrq-78-li9" secondAttribute="centerX" id="haw-aZ-pIB"/>
+                            <constraint firstItem="6qV-bR-KPs" firstAttribute="top" secondItem="kTA-kc-1Ff" secondAttribute="bottom" constant="32.670000000000002" id="l6d-Dc-Y7t"/>
+                            <constraint firstItem="RKC-gC-qac" firstAttribute="leading" secondItem="8l3-6K-puW" secondAttribute="leading" constant="120" id="lCd-cm-16u"/>
+                            <constraint firstItem="9Mk-h2-EZG" firstAttribute="leading" secondItem="8l3-6K-puW" secondAttribute="leading" constant="82" id="tbM-hV-hRc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="0Ov-VE-eCg"/>
+                    <connections>
+                        <outlet property="processLabel" destination="1Qc-gN-Wia" id="SiY-1j-h6Y"/>
+                        <outlet property="productImage" destination="6qV-bR-KPs" id="CXk-iK-hji"/>
+                        <outlet property="progressBar" destination="9Mk-h2-EZG" id="sUp-bd-mNL"/>
+                        <outlet property="thanksStack" destination="kTA-kc-1Ff" id="Ot1-Fd-bo2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9mn-lV-0lS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5779.7101449275369" y="118.52678571428571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5Gd-1j-Hao">
